crates/mecojoni-core/tests/fixtures/invalid/independent-errors.meco
---
meco: 1.0
module: independent-errors
---

# broken-weight
- [0] never

# broken-escape
- bad \q

# broken-call
- &notice extra

# recovered
- still parsed for recovery
